--- a/public/scss/mensajeria/chat.scss
+++ b/public/scss/mensajeria/chat.scss
@@ -86,6 +86,12 @@
             }
         }
 
+        .chat_privado{
+            .status_canal{
+                
+            }
+        }
+
         h6{
             padding-left: 5px;
             text-align: center;
@@ -245,7 +251,21 @@
             -moz-box-shadow: none; 
             box-shadow: none; 
             resize: none; 
+        }        
+        
+        .mensaje_input{
+            width: 300px;
+            min-height: 17px;
+            border: 1px solid rgb(109, 31, 161);
+            max-height: 150px;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
+
+        .mensaje_input:focus{
+            background-color: #7c4cc3;
+        }
+
         textarea:focus { 
             border: none; 
             overflow: auto; 
@@ -257,14 +277,7 @@
         }
     } 
 }
-        .mensaje_input{
-            width: 300px;
-            min-height: 17px;
-            border: 1px solid #ccc;
-            max-height: 150px;
-            overflow-x: hidden;
-            overflow-y: auto;
-        }
+
         
 .lista_de_usuarios{
     display: flex;
