--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,7 +28,7 @@
   background-color: #7c4cc3;
   color: aliceblue;
   border-bottom: 1px solid rgb(61, 61, 61);
-  padding-top: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 .nav #antara {
   font-family: "Raleway", sans-serif;
@@ -39,15 +39,15 @@
 .nav .titulo_nav {
   display: flex;
 }
-.nav .parte_izq_nav {
+.nav .parte_der_nav {
   display: flex;
 }
-.nav .parte_izq_nav .usuarios_nav {
+.nav .parte_der_nav .usuarios_nav {
   display: flex;
   align-items: baseline;
   margin-right: 2rem;
 }
-.nav .parte_izq_nav .usuarios_nav h6 {
+.nav .parte_der_nav .usuarios_nav h6 {
   padding-left: 5px;
   font-size: 1.2rem;
 }
@@ -57,20 +57,43 @@
   color: aliceblue;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 22%;
+  min-height: 100%;
+  width: 28%;
 }
-.user .chats {
+.user .desplegable {
+  display: flex;
+  background-color: #110f13;
+  align-items: baseline;
+  padding: 0.3rem 0.5rem;
+}
+.user .canales {
   display: flex;
   flex-direction: column;
 }
-.user .chats h6 {
-  /*         margin-left: 0.5rem; */
-  background-color: #110f13;
-  padding: 0.5rem;
+.user .canales .canal {
+  display: flex;
+  align-items: baseline;
 }
-.user .chats h8 {
-  margin-left: 0.5rem;
+.user .canales .canal i {
+  padding-left: 0.5rem;
+}
+.user .canales h6 {
+  padding-left: 5px;
+  text-align: center;
+}
+.user .canales i h6 {
+  display: flex;
+}
+.user .canales h8 {
+  padding: 0.3rem 0.5rem;
+}
+.user .canales .canal:hover {
+  background-color: #110f13;
+  cursor: pointer;
+}
+.user .canales .chat_privado:hover {
+  background-color: #110f13;
+  cursor: pointer;
 }
 .user .user_up {
   display: flex;
@@ -79,31 +102,54 @@
   margin-top: 2rem;
   margin-bottom: 1.5rem;
 }
-.user .user_up .user_pfp .user_pfp_img {
+.user .user_up .contenedor_img {
+  position: relative;
+}
+.user .user_up .contenedor_img .user_pfp {
   border-radius: 50%;
   width: 5rem;
   height: 5rem;
   object-fit: cover;
   margin-bottom: 5px;
 }
-.user .user_up .user_pfp .status-on {
+.user .user_up .contenedor_img .status {
   background-color: rgb(69, 173, 43);
+  border: 2px solid #1a181d;
   border-radius: 50%;
-  width: 1rem;
-  height: 1rem;
+  width: 1.2rem;
+  height: 1.2rem;
   position: absolute;
-}
-.user .user_up .user_pfp .status-off {
-  background-color: rgb(128, 14, 14);
-  border-radius: 50%;
-  width: 1rem;
-  height: 1rem;
-  position: absolute;
+  right: 1px;
 }
 
+.chat-area {
+  /* ===== Scrollbar CSS ===== */
+  /* Chrome, Edge, and Safari */
+}
+.chat-area .canal_name {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgb(61, 61, 61);
+}
+.chat-area .canal_name i {
+  font-size: 1.9rem;
+}
+.chat-area .chat_estructura::-webkit-scrollbar {
+  width: 16px;
+}
+.chat-area .chat_estructura::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+.chat-area .chat_estructura::-webkit-scrollbar-thumb {
+  background-color: #7c4cc3;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
+}
 .chat-area .chat_estructura {
   display: flex;
   flex-direction: column;
+  height: 75vh;
+  overflow-y: auto;
 }
 .chat-area .chat_estructura .mensaje {
   display: flex;
@@ -119,9 +165,6 @@
   margin-bottom: 0;
   margin-left: 4px;
 }
-.chat-area .relleno {
-  height: 40rem;
-}
 .chat-area .chat-enviar-mensaje {
   display: flex;
   padding: 5px 4px;
@@ -129,10 +172,31 @@
   border-top: 1px solid rgba(61, 61, 61, 0.137);
 }
 .chat-area .chat-enviar-mensaje h6 {
-  margin-right: 15px;
+  margin-right: 10px;
+  margin-left: 5px;
 }
 .chat-area .chat-enviar-mensaje i {
   font-size: 1.5rem;
+}
+.chat-area .chat-enviar-mensaje .emoji {
+  display: flex;
+  align-items: baseline;
+}
+.chat-area .chat-enviar-mensaje form {
+  display: flex;
+}
+.chat-area .chat-enviar-mensaje form button, .chat-area .chat-enviar-mensaje form input[type=submit], .chat-area .chat-enviar-mensaje form input[type=reset] {
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+}
+.chat-area .chat-enviar-mensaje .status_2 {
+  background-color: rgb(69, 173, 43);
+  border-radius: 50%;
+  width: 0.5rem;
+  height: 0.5rem;
 }
 .chat-area .chat-enviar-mensaje textarea {
   border: none;
@@ -142,6 +206,17 @@
   -moz-box-shadow: none;
   box-shadow: none;
   resize: none;
+}
+.chat-area .chat-enviar-mensaje .mensaje_input {
+  width: 300px;
+  min-height: 17px;
+  border: 1px solid rgb(109, 31, 161);
+  max-height: 150px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.chat-area .chat-enviar-mensaje .mensaje_input:focus {
+  background-color: #7c4cc3;
 }
 .chat-area .chat-enviar-mensaje textarea:focus {
   border: none;
