--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -1,7 +1,10 @@
 <div class="todo">
     <div class="nav">
         <div class="titulo_nav">
-            <h1 id="antara">Antara</h1><i class='bx bxs-message-rounded-dots'></i>
+            <div>
+                <h1 id="antara">Antara</h1>
+                <i class='bx bxs-message-rounded-dots'></i>
+            </div>
         </div>
         <div class="parte_izq_nav">
             <div class="usuarios_nav"><i class='bx bxs-group'></i>
