--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet">
+    <!--doc js-->
+    <script src="../models/login.js" type="module"></script>
 </head>
 
 <body>
@@ -23,6 +25,8 @@
     {{{body}}}
 
 
+    <!--toastify JS-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/socket-client.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
