--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap" rel="stylesheet">
     <!--doc js-->
-    <script src="../models/login.js" type="module"></script>
+    <script src="../firebase/login.js" type="module"></script>
 </head>
 
 <body>
