--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -52,7 +52,7 @@
             <div class="p-3">
                 <form action="" class="row w-100 gap-3" id="formMensaje">
                     <div>
-                        <input type="text" class="form-control" id="cuadroMensaje">
+                        <input type="text" class="form-control w-100" id="cuadroMensaje">
                     </div>
                     <div class="col w-100">
                         <button id="btn-enviar" class="btn btn-primary">
