--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container registro">
         <div class="header">
             <h2>Crear cuenta</h2>
         </div>
@@ -30,6 +30,6 @@
             
            
         </form>
-    </div>
+</div>
       <!--toastify JS-->
       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
