--- a/public/scss/mensajeria/chat.scss
+++ b/public/scss/mensajeria/chat.scss
@@ -13,10 +13,10 @@
 }
 
 
-/* .todo{
-    background-color: #a29faf;
+.todo{
+    width: 100%;
 }
- */
+
 .divisiones{
     display:flex;
     height: 100%;
@@ -29,7 +29,7 @@
     background-color: #7c4cc3;
     color: aliceblue;
     border-bottom: 1px solid rgb(61, 61, 61);
-    padding: .5rem 1rem;
+    padding: 1rem;
 
 
     #antara{
